# PJCmodel

./: CMakeLists.txt  Readme.md  cont_c1000.txt  generate_c1000.txt  sELDIG_L2phylo.R  sELDIG_generate_parameters.R  sELDIG_parameters.R  sELDIG_trees.R  test_submit.sh
jc/: CMakeLists.txt  cmd_line.h  game_watches.hpp  gdm.cpp  gdm.h  iomatlab.cpp  iomatlab.h  jc.cpp  jc.h  jc_config.hpp  jc_simd.h  main.cpp  observer.cpp  observer.hpp  sampler.cpp  sampler.h  square_buffer.h
jcpp/: CMakeLists.txt  jcpp.cpp
test/: CMakeLists.txt  main.cpp
